--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
-    "astro": "5.15.6"
+    "astro": "5.15.6",
+    "graphql": "^16.12.0",
+    "graphql-request": "^7.3.3"
   },
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.9.0",
